--- a/package.json
+++ b/package.json
@@ -15,8 +15,12 @@
     "@react-firebase/database": "^0.3.11",
     "@types/aos": "^3.0.7",
     "aos": "^3.0.0-beta.6",
+    "canvas-confetti": "^1.9.3",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "firebase": "^10.12.5",
+    "framer-motion": "^11.3.30",
+    "lucide-react": "^0.435.0",
     "react": "^18.3.1",
     "react-card-carousel": "^1.1.3",
     "react-dom": "^18.3.1",
@@ -25,6 +29,8 @@
     "react-router-dom": "^6.26.0",
     "storybook": "^8.2.8",
     "swiper": "^11.1.9",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7",
     "vite-tsconfig-paths": "^5.0.1"
   },
   "devDependencies": {
@@ -48,7 +54,7 @@
     "eslint-plugin-storybook": "^0.8.0",
     "globals": "^15.9.0",
     "postcss": "^8.4.41",
-    "tailwindcss": "^3.4.9",
+    "tailwindcss": "^3.4.10",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.0",
     "vite": "^5.4.0"
