--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -6,6 +6,9 @@
       "@public/*": ["./public/*"],
      "@components/*": ["./src/components/*"],
      "@utils/*": ["./src/utils/*"],
+     "@views/*": ["./src/views/*"],
     }
   }
 }
+
+
