--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@react-firebase/database": "^0.3.11",
     "@types/aos": "^3.0.7",
+    "@types/canvas-confetti": "^1.6.4",
     "aos": "^3.0.0-beta.6",
     "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.0",
